--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.2.0-beta1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-react-views": "^0.11.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.3.4",
     "react": "^16.14.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^16.14.0"
   }
 }
