--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.3.4",
     "react": "^16.14.0",
+    "react-bootstrap": "^2.4.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^16.14.0"
   }
